--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@uniswap/v2-core": "^1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@web3-react/core": "^6.1.9",
+    "@web3-react/core": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.4",
+    "@web3-react/walletconnect-connector": "^6.1.1",
     "ajv": "^6.12.3",
     "bignumber.js": "^9.0.0",
     "canvas-confetti": "^1.3.3",
@@ -62,6 +62,7 @@
     "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
+    "moralis": "^0.0.36",
     "multicodec": "^2.0.0",
     "multihashes": "^3.0.1",
     "node-fetch": "^2.6.1",
